--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Truday Shopping</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="main.js"></script>
+</head>
+<body class="bg-gray-50 text-gray-800">
+  <header class="bg-white shadow-md p-4 flex justify-between items-center">
+    <h1 class="text-2xl font-bold text-blue-600">Truday</h1>
+    <nav>
+      <a href="index.html" class="text-blue-500 hover:underline">Home</a>
+      <a href="cart.html" class="ml-4 text-blue-500 hover:underline">Cart</a>
+      <a href="admin.html" class="ml-4 text-blue-500 hover:underline">Admin</a>
+    </nav>
+  </header>
 
+  <main class="p-6">
+    <section class="text-center mb-10">
+      <h2 class="text-3xl font-semibold mb-2">Welcome to Truday</h2>
+      <p class="text-gray-600">Everyday essentials powered by community sellers.</p>
+      <input type="text" id="searchInput" placeholder="Search products..." class="mt-4 px-4 py-2 border rounded w-full max-w-md" />
+    </section>
+
+    <section id="productGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <!-- JS will populate this section -->
+    </section>
+  </main>
+
+  <footer class="text-center mt-12 p-4 bg-white shadow-inner">
+    <p class="text-sm text-gray-500">&copy; 2025 Truday. All rights reserved.</p>
+  </footer>
+</body>
+  </html>
